Update to Java 8 and Spring 4.1.3